[project]
name = "django-durable"
version = "0.1.0"
description = "Durable execution framework for Django web apps."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "ruff~=0.4",
    "isort~=5.13",
    "nox>=2024.4.15",
    "mypy>=1.11",
    "django-stubs>=5.2",
]

[tool.setuptools]
packages = ["django_durable"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest~=8.2",
    "ruff~=0.4",
    "isort~=5.13",
    "nox>=2024.4.15",
    "mypy>=1.11",
    "django-stubs>=5.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["testproj", "django_durable/migrations", "manage.py"]

[tool.ruff.format]
quote-style = "single"

[tool.isort]
profile = "black"
line_length = 88
skip = ["testproj", "django_durable/migrations", "manage.py", ".venv"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
files = ["django_durable", "testproj"]
exclude = ["django_durable/migrations", "manage.py"]

[[tool.mypy.overrides]]
module = ["testproj.settings"]
ignore_errors = false

[[tool.mypy.overrides]]
module = ["django_durable.*", "testproj.*"]
ignore_errors = true
